--- a/config/RNN.yaml
+++ b/config/RNN.yaml
@@ -16,7 +16,7 @@ model:
   layer_num: 2
   bidirectional: True
   dropout: 0.5
-  fc_dim: [64]
+  fc_dim: []
 
 eval: 'acc'
 
@@ -24,7 +24,7 @@ data:
   path: 'data/SST-2'
   batch_size: 16
 
-use_pre_embedding: True
+use_pre_embedding: False
 embedding:
   name: 'glove'
   embedding_path: 'data/glove/glove.6B.100d.txt'
